--- a/ex2/style.css
+++ b/ex2/style.css
@@ -11,13 +11,24 @@ body{
     width: 500px;
     height: 200px;
     align-items: center;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    padding-right: 30px;
     
 }
 .secondbox {
+    position: relative;
     border: 5px solid pink;
     width: 500px;
     height: 200px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    padding-right: 30px;
     align-items: center;
+    justify-content: center;
+    
+    
+   
     
 }
 .thirdbox {
@@ -25,19 +36,22 @@ body{
     width: 500px;
     height: 200px;
     align-items: center;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    padding-right: 30px;
+    
     
 }
 
 main {
-    position: relative;
-   
-    
+    position: relative; 
     justify-content: center;
     align-items: center;
     padding-left: 500px;
-  
-   padding-top: 150px;
+    padding-top: 150px;
     
+}
 
-
+p .firstbox{
+    left: 5px;
 }
