--- a/ex7/style.css
+++ b/ex7/style.css
@@ -36,6 +36,8 @@ nav li a{
     padding-right: 33px;
     margin-right: 10px;
     justify-content: space-between;
+    padding-top: 10PX;
+    padding-bottom: 10PX;
    
     
     
