--- a/ex7/style.css
+++ b/ex7/style.css
@@ -6,18 +6,18 @@ nav {
    
     background-color: pink;
     width: 690px;
-    height: 57px;
+    height: 27px;
     margin-top: 352px;
     margin-left: 390px;
    padding: 10px;
 }
-.container{
+ul{
     list-style: none;
     display:flex;
     justify-content:center;
     font-size:larger;
     align-items: center;
-    margin: -145px;
+    margin: -174px;
     padding: 166px;
     font-family: Arial, Helvetica, sans-serif;
     justify-content: space-between;
@@ -43,8 +43,8 @@ nav li a{
     
 }
 li{
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 60px;
+    margin-right: -12px;
     
     align-items: baseline;
     flex:content;
