--- a/ex8/style.css
+++ b/ex8/style.css
@@ -15,23 +15,25 @@ nav {
     background-color: pink;
     width: 934px;
     height: 67px;
-    margin-top: 358px;
-    margin-left: 420px;
+    margin-top: 383px;
+    margin-left: 299px;
     margin-right: 30px;
-   padding: 1px;
+    padding: 1px;
+ 
 
 }
 ul{
     list-style: none;
     display:flex;
-   
-    font-size:larger;
+   font-size:larger;
   margin-right:20px ;
     margin: -219px;
     padding: 159px;
     font-family: Arial, Helvetica, sans-serif;
     justify-content: flex-end;
     text-align:center;
+    padding-right: 277px;
+    padding-top: 153px;
    
         
    
@@ -49,6 +51,8 @@ nav li a{
     padding-top: 27PX;
     padding-bottom: 15PX;
    padding-left: 12px;
+   left: 50%;
+    top:50%;
     
    
     
@@ -74,7 +78,9 @@ h1 a{
    color:white;
    padding: 21px;
    margin: -1px;
+   font-family: Arial, Helvetica, sans-serif;
 }
+
 
 
 
