--- a/ex9/style.css
+++ b/ex9/style.css
@@ -1,39 +1,25 @@
-
 body{
     margin: 0;
 }
-.flex-container {
-    display: flex; 
-    flex-direction: row;
-    width: 100px;
-    margin: 10px;
-    
-  }
 
 nav {
    
     background-color: pink;
-    width: 934px;
-    height: 67px;
-    margin-top: 383px;
-    margin-left: 299px;
-    margin-right: 30px;
-    padding: 1px;
- 
-
+    width: 690px;
+    height: 27px;
+    margin-top: 352px;
+    margin-left: 390px;
+   padding: 10px;
 }
 ul{
     list-style: none;
     display:flex;
-   font-size:larger;
-  margin-right:20px ;
-    margin: -151px;
-    padding: 205px;
+    justify-content:center;
+    font-size:larger;
+    align-items: center;
+    margin: -7px;
     font-family: Arial, Helvetica, sans-serif;
-    justify-content: flex-end;
-    text-align:center;
-    padding-right: 277px;
-    padding-top: 153px;
+    margin-right: 102px;
    
         
    
@@ -44,31 +30,21 @@ ul{
 nav li a{
     display:flex;
     color: red;
-    border-right: 2px solid red;
-    padding-right: 13px;
-    margin-right: -58px;
+    border-right: 3px solid red;
+    padding-right: 33px;
     justify-content: space-between;
-    padding-top: 27PX;
-    padding-bottom: 15PX;
-   padding-left: 12px;
-   left: 50%;
-    top:50%;
-    
-   
+    padding-top: 10PX;
+    padding-bottom: 10PX;
+    margin-left: 60px;
+    margin-right: -12px;
     
     
-}
-li a{
-    margin-left: 64px;
-    margin-right: -4px;
-   
-    justify-content: flex-end;
-    padding-left: 15px;
-    padding-right: 14px;
-    align-items: flex-end;
   
    
     
+    
 }
+
+
 
 
